--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
 .emojiList {
     display: flex;
     flex-direction: row;
-    gap: 4rem;
+    gap: 8rem;
+    text-align: center;
 }
 
 .movieList {
